# api-design-rust-v1

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20251118050815_create_users_table.sql
postgres_data/: postmaster.pid
postgres_data/base/1/: 1255  1259  13416  13417  13421  2619  2619_fsm  2619_vm  2659  2664  2675  2696  2836  2838_fsm  2840  2840_fsm  2840_vm  2841  pg_internal.init
postgres_data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13412  13412_fsm  13412_vm  13416  13417  13417_fsm  13417_vm  13421  13422  13422_fsm  13422_vm  13426  13427  13427_fsm  13427_vm  13431  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+206 more)
postgres_data/base/16386/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13412  13412_fsm  13412_vm  13416  13417  13417_fsm  13417_vm  13421  13422  13422_fsm  13422_vm  13426  13427  13427_fsm  13427_vm  13431  16575  16586  16587  16605  16606  16608  16610  174  175  2187  (+216 more)
postgres_data/base/4/: 2666  2667  2673  2838
postgres_data/base/5/: 13426  13431  2579  2609_fsm  2618  2619  2658  2663  2665  2674  2837  (+1 more)
postgres_data/global/: 1214  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  pg_control  pg_internal.init
scripts/: init_db.sh  stop_postgres.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: login.rs  mod.rs
tests/: health_check.rs
