[package]
name = "api-design-rust-v1"
description = "RAG API using HuggingFace models powered by Rust"
keywords = ["rag-pipeline", "rust", "huggingface", "aws"]
authors = ["Tejas Pancholi <tejas.pancholi@deepshieldai.com>"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api_design_rust_v1"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.24"
